fix: fix blocks text-overflow

--- a/src/assets/fonts/index.scss
+++ b/src/assets/fonts/index.scss
@@ -3,6 +3,7 @@
 	font-weight: 400;
 	font-style: normal;
 	src: url(PTSans-Regular.ttf);
+	font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
 	font-weight: 300;
 	font-style: normal;
 	src: url(WorkSans-Light.ttf);
+	font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
 	font-weight: 400;
 	font-style: normal;
 	src: url(WorkSans-Regular.ttf);
+	font-display: swap;
 }
 
 @font-face {
@@ -24,4 +27,5 @@
 	font-weight: 500;
 	font-style: normal;
 	src: url(WorkSans-Medium.ttf);
+	font-display: swap;
 }
